--- a/event_management_app/pubspec.yaml
+++ b/event_management_app/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
 
   # Firebase dependencies
-  firebase_core: ^2.14.0
+  firebase_core: ^2.32.0
   cloud_firestore: ^4.10.1
   
   # State management
@@ -48,7 +48,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  http: ^0.13.5
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
