--- a/event_management_app/firebase.json
+++ b/event_management_app/firebase.json
@@ -1,1 +1,28 @@
-{"flutter":{"platforms":{"dart":{"lib/firebase_options.dart":{"projectId":"event-management-1099","configurations":{"web":"1:28661019517:web:528303b48e9119e8ce1214"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "event-management-1099",
+          "configurations": {
+            "web": "1:28661019517:web:528303b48e9119e8ce1214"
+          }
+        }
+      }
+    }
+  },
+  "hosting": {
+    "public": "build/web",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }
+}
