--- a/event_management_app/pubspec.yaml
+++ b/event_management_app/pubspec.yaml
@@ -49,6 +49,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   http: ^0.13.5
+  flutter_dotenv: ^5.0.2
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
