--- a/event_management_app/.gitignore
+++ b/event_management_app/.gitignore
@@ -17,6 +17,9 @@ migrate_working_dir/
 .idea/
 lib/firebase_options.dart
 
+firebase-init.js
+
+
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
